# aiida-code-registry

./: .pre-commit-config.yaml  .yamllint  LICENSE  README.md  database.json  database_v2.json  database_v2_1.json  pyproject.toml  registry.py
.github/PULL_REQUEST_TEMPLATE/: config.yml  new_configuration.md
.github/workflows/: deploy.yml  pre-commit.yml  test.yml
.make_ghpages/: generate_json.py  index.html
aiida_code_registry/: __init__.py  cli.py  config.py
computers/daint-hybrid/: cp2k-6.1@daint-hybrid.yml  daint-hybrid-setup.yml  daint-hybrid.yml
computers/daint-mc/: cp2k-6.1@daint-mc.yml  daint-mc-setup.yml  daint-mc.yml
computers/fidis/: cp2k-5.1@fidis.yml  fidis.yml
computers/paratera-th2/: README  paratera-th2-configure.yml  pw65@paratera-th2.yml
configurations/: aiidalab.yaml
daint.cscs.ch/: default
daint.cscs.ch/codes/: 2ppafm.yaml  cp2k-6.1-cpu.yaml  cp2k-6.1-gpu.yaml  cp2k-6.1-hybrid.yaml  cp2k-6.1-mc.yaml  cp2k-6.1-multicore.yaml  cp2k-7.1-cpu.yaml  cp2k-7.1-gpu.yaml  cp2k-7.1-hybrid.yaml  cp2k-7.1-mc.yaml  cp2k-7.1-multicore.yaml  cp2k-8.1-cpu.yaml  cp2k-8.1-hybrid.yaml  cp2k-8.1-mc.yaml  cp2k-8.1-multicore.yaml  cp2k-9.1-hybrid.yaml  cp2k-9.1-multicore.yaml  dos-7.0-multicore.yaml  dos-7.2-hybrid.yaml  hrstm.yaml  overlap.yaml  pp-6.5-mc.yaml  pp-6.5-multicore.yaml  pp-7.0-multicore.yaml  pp-7.2-hybrid.yaml  ppafm.yaml  projwfc-6.5-mc.yaml  projwfc-6.5.yaml  projwfc-7.0-multicore.yaml  projwfc-7.2-hybrid.yaml  pw-6.5-mc.yaml  pw-6.5-multicore.yaml  pw-7.0-multicore.yaml  pw-7.2-hybrid.yaml  stm.yaml
daint.cscs.ch/hybrid-s1005/: computer-configure.yaml  computer-setup.yaml  cp2k-7.1.yaml  (+4 more)
eiger.cscs.ch/: default
fidis.epfl.ch/: default
imxgesrv1.epfl.ch/: default
lsmosrv4/: computer-setup.yaml
lsmosrv6/: default
paratera/: default
tigu.empa.ch/: default
(+119 files in other folders)
